Fixes #1114: Create 'Source Data Verification Progress' widget. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1464 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3207,9 +3207,13 @@ customize_home_page = Customize Home Page
 
 # widgets headers
 nds_assigned_to_me_widget_header = My Discrepancies
-events_completion_widget_header = Event Status by Events
+events_completion_widget_header = Event Status Details
 subject_status_count_widget_header = Subject Status Summary
 study_progress_widget_header = Events Status Summary
+sdv_progress_widget_header = Source Data Verification Progress
+
+# widgets description
+sdv_widget_description = SDV Progress.
 
 # toolbar header
 available_widgets = Available Widgets
@@ -3473,6 +3477,20 @@ systemProperty.randomizationTrialId.description=If specified here, Randomization
 
 systemProperty.level.label=Level
 systemProperty.dictionary.label=Dictionary
+
+#List of month in short form
+short.month.1 = Jan
+short.month.2 = Feb
+short.month.3 = Mar
+short.month.4 = Apr
+short.month.5 = May
+short.month.6 = June
+short.month.7 = July
+short.month.8 = Aug
+short.month.9 = Sept
+short.month.10 = Oct
+short.month.11 = Nov
+short.month.12 = Dec
 
 systemProperty.ccts.waitBeforeCommit.label=Wait before commit
 systemProperty.ccts.waitBeforeCommit.description=This parameter is used for ClinCapture instances that have been modified and configured to work \
