--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -287,6 +287,8 @@ has_been_removed_from_the_event = has been removed from the Event\u0009
 
 has_been_removed_from_the_study = has been removed from the Study\u0009
 
+has_been_removed_from_the_site = has been removed from the site\u0009
+
 has_been_removed_from_the_study_site = has been removed from the Study/Site\u0009
 
 has_been_removed_from_the_subject_record_for = \ has been removed from the Subject Record for\u0009
