--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -305,6 +305,8 @@ has_been_restored_to_the_event = has been restored to the Event
 
 has_been_restored_to_the_study = has been restored to the Study
 
+has_been_restored_to_the_site = has been restored to the site
+
 has_been_restored_to_the_study_site = \ has been restored to the Study/Site\u0009
 
 has_been_unlocked_for_the_study = \ has been unlocked for the Study
