Fixes #1319: Update headers in the widgets toolbar. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1469 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3217,8 +3217,8 @@ sdv_widget_description = SDV Progress.
 
 # toolbar header
 available_widgets = Available Widgets
-one_column_widgets = One-Column Widgets
-two_column_widgets = Two-Column Widgets
+one_column_widgets = Small Widgets
+two_column_widgets = Large Widgets
 
 import_summary_subjects_affected = Subjects: {0} affected
 import_summary_events_affected = Events: {0} affected
