Fixes #1295: Move Medical Coding and Data Import to System Settings. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1481 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -426,8 +426,8 @@ sasDataset.exception.zip=The ready.txt was found but the sas dataset zip was not
 sasDataset.exception.sasExtractFolder=You should specify the SAS extract folder on the system properties page.
 sasDataset.exception.sasFolder=The ''{0}'' folder was specified but it does not exist.
 
-please_remove_the_final_slash = Please remove the final slash.
+please_remove_the_final_slash = Please remove the final slash in the Bioontoloty URL.
+please_provide_a_valid_url = Please provide a valid Bioontoloty URL.
 please_supply_the_biootology_api_key = Please supply the bioontology API key.
-
 unspecified_error_with_job_creation=There was an unspecified error with your creation, please contact an administrator.
 job_modification_error=Your modifications caused an error, please see the messages for more information.
