--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3269,6 +3269,7 @@ systemProperty.job_scheduler.name=Job Scheduler
 systemProperty.usage_statistics.name=Usage Statistics
 systemProperty.theme.name=Color Theme
 systemProperty.extracts.name=Extracts
+systemProperty.imports.name=Imports
 systemProperty.email.name=Email
 systemProperty.security.name=Security
 systemProperty.facility.name=Facility
@@ -3477,6 +3478,32 @@ systemProperty.randomizationTrialId.description=If specified here, Randomization
 
 systemProperty.level.label=Level
 systemProperty.dictionary.label=Dictionary
+
+systemProperty.allowCodingVerification.label=Allow medical coding
+systemProperty.allowCodingVerification.yes.radioLabel=Yes
+systemProperty.allowCodingVerification.no.radioLabel=No
+systemProperty.medicalCodingApprovalNeeded.label=Medical Coding Approval Needed
+systemProperty.medicalCodingApprovalNeeded.yes.radioLabel=Yes
+systemProperty.medicalCodingApprovalNeeded.no.radioLabel=No
+systemProperty.medicalCodingContextNeeded.label=Code with context
+systemProperty.medicalCodingContextNeeded.yes.radioLabel=Yes
+systemProperty.medicalCodingContextNeeded.no.radioLabel=No
+systemProperty.defaultBioontologyURL.label=Bioontology URL
+systemProperty.autoCodeDictionaryName.label=Auto-code Dictionary Name
+systemProperty.medicalCodingApiKey.label=Bioontology API key
+
+systemProperty.markImportedCRFAsCompleted.label=Mark imported CRF as Completed
+systemProperty.markImportedCRFAsCompleted.yes.radioLabel=Yes
+systemProperty.markImportedCRFAsCompleted.no.radioLabel=No
+systemProperty.replaceExisitingDataDuringImport.label=Replace existing data during import
+systemProperty.replaceExisitingDataDuringImport.yes.radioLabel=Yes
+systemProperty.replaceExisitingDataDuringImport.no.radioLabel=No
+systemProperty.autoScheduleEventDuringImport.label=Auto-schedule event during import
+systemProperty.autoScheduleEventDuringImport.yes.radioLabel=Yes
+systemProperty.autoScheduleEventDuringImport.no.radioLabel=No
+systemProperty.autoCreateSubjectDuringImport.label=Auto-create subject during import
+systemProperty.autoCreateSubjectDuringImport.yes.radioLabel=Yes
+systemProperty.autoCreateSubjectDuringImport.no.radioLabel=No
 
 #List of month in short form
 short.month.1 = Jan
