Fixes #1296: Rework Study Parameters Configuration. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1482 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1007,7 +1007,7 @@ event_definitions = Event Definitions
 
 event_location = Event Location
 
-event_location_required = Event Location Required?
+event_location_required = Collect Event Location?
 
 event_name = Event Name
 
@@ -1180,7 +1180,7 @@ hide = Hide
 
 how_to_generate = How to Generate the Subject Person ID?
 
-how_to_generate_the_study_subject_ID = How to Generate the Study Subject ID?
+how_to_generate_the_study_subject_ID = How to Generate Subject ID?
 
 how_to_generate_the_subject = How to Generate the Subject Person ID?
 
@@ -1246,15 +1246,15 @@ interview_date_required = Interview Date Required?
 
 interviewer = Interviewer
 
-interviewer_date_default_as_blank = Interview Date Default as Blank?
+interviewer_date_default_as_blank = Interview Date Default:
 
 interviewer_date_editable = Interview Date Editable?
 
-interviewer_date_required = Interview Date Required?
+interviewer_date_required = Collect Interview Date?
 
 interviewer_name = Interviewer Name
 
-interviewer_name_default_as_blank = Interviewer Name Default as Blank?
+interviewer_name_default_as_blank = Interviewer Name Default:
 
 interviewer_name_editable = Interviewer Name Editable?
 
@@ -2145,7 +2145,7 @@ subject_id_setting = subject id setting
 
 subject_of_your_question = Subject of your question
 
-subject_person_ID_required = Person ID Required?
+subject_person_ID_required = Collect Person ID?
 
 subject's_record = Subject's Record
 
@@ -2559,7 +2559,7 @@ what_is_null_value = What is Null Value?
 
 when_entering_data = When Performing Data Entry, Interviewer Name Required?
 
-when_entering_data_entry_interviewer = When Performing Data Entry, Interviewer Name Required?
+when_entering_data_entry_interviewer = Collect Interviewer Name?
 
 workflow = Workflow
 
@@ -2807,7 +2807,7 @@ nav_other = Other
 nav_update_profile = Update Profile
 nav_view_study = View Study
 design = Design
-forced_reason_for_change = Forced Reason For Change in Administrative Editing?
+forced_reason_for_change = Require Reason For Change?
 table_filter_instructions =Enter filter criteria below :
 table_apply_filter= Apply Filter
 table_clear_filter= Clear Filter
@@ -3025,31 +3025,35 @@ import_comma = ImportDataEntry,
 batch_comma = Batch,
 dest_prop_colon = DestinationProperty:
 
-secondaryIDRequired = Secondary ID Required?
-dateOfEnrollmentForStudyRequired = Date of Enrollment for Study Required?
+secondaryIDRequired = Collect Secondary ID?
+dateOfEnrollmentForStudyRequired = Collect Date of Enrollment for Study?
 studySubjectIdLabel = Study Subject ID Label:
-secondaryIdLabel = Secondary ID label:
+secondaryIdLabel = Secondary ID Label:
 dateOfEnrollmentForStudyLabel = Date of Enrollment for Study Label:
 genderLabel = Gender Label:
-gender_required2 = Gender Required?
+gender_required2 = Collect Gender?
 
-startDateTimeRequired=Start Date/Time Required?
-endDateTimeRequired=End Date/Time Required?
-useStartTime=Use Start Time?
-useEndTime=Use End Time?
-endDateTimeLabel=End Date/Time Label:
+startDateTimeRequired=Collect Start Date?
+endDateTimeRequired=Collect Stop Date?
+useStartTime=Collect Start Time?
+useEndTime=Collect Stop Time?
+endDateTimeLabel=Stop Date/Time Label:
 startDateTimeLabel=Start Date/Time Label:
 
 markImportedCRFAsCompleted=Mark imported CRF as Completed?
 autoScheduleEventDuringImport=Auto-schedule event during import?
 autoCreateSubjectDuringImport=Auto-create subject during import?
 
-allowSdvWithOpenQueries=Allow SDV with open queries?
+allowSdvWithOpenQueries=Allow SDV With Open Queries?
 
 replaceExisitingDataDuringImport=Replace existing data during import?
 
 days_after_it_was_last_used = days after it was last used
 
+studyParameters = Study Parameters
+subjectParameters = Subject Parameters
+eventParameters = Event Parameters
+dataEntryParameters = Data Entry Parameters
 subjectForm=Subject Form
 studyEventForm=Study Event Form
 dataImport=Data Import
