Fixes #1285: Removing all Sites and then re-adding another Site does not re-enable the User Account. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1483 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -801,7 +801,7 @@ the_new_site_created_succesfully_current = The new site has been created success
 
 the_new_study_created_succesfully_current = The new study has been created successfully. Please change your study to the one you just created. Go to the Build Study page to continue configuring your study or notify the user responsible for configuring the study that it is ready for them.
 
-the_role_cannot_be_restored_since_user_deleted = The role cannot be restored, since the user is deleted.
+the_role_cannot_be_restored_since_study_deleted = The role cannot be restored, since the study {0} is removed.
 
 the_role_choosen_was_invalid_choose_another = The role chosen was invalid.  Please choose another one.
 
@@ -813,23 +813,19 @@ the_specified_action_is_not_allowed = The specified action is not allowed.
 
 the_specified_action_on_the_user_is_invalid = The specified action on the user is invalid.
 
-the_specified_user_not_exits = The specified user does not exist.
-
-the_specified_user_role_not_exits_for_study = The specified user role does not exist for the specified study.
+the_specified_user_not_exits = The user account with ID {0} does not exist.
 
 the_study_has_been_updated_succesfully = The study has been updated successfully.
 
 the_study_subject_ID_used_by_another_in_study_site = The Study Subject ID has been used by another subject in the destination study/site. Study Subject ID must be unique within a study, so please change the ID before reassign this subject.
 
-the_study_user_role_deleted = The study user role has been deleted.
+the_study_user_role_deleted = The {0} role for the user {1} in the study {2} has been deleted.
 
-the_study_user_role_removed = The study user role has been removed.
+the_study_user_role_removed = The {0} role for the user {1} in the study {2} has been removed.
 
-the_study_user_role_restored = The study user role has been restored.
+the_study_user_role_restored = The {0} role for the user {1} in the study {2} has been restored.
 
 the_user_role_deleted = The user role has been deleted.
-
-you_cannot_remove_the_sysadmin_role_for_the_root_user = You cannot remove the 'system administrator' role for the root user.
 
 the_subject = The subject
 
@@ -845,6 +841,10 @@ the_user_account = The user account\u0009
 
 the_user_could_not_be_deleted_due_database_error = The user could not be deleted due to a database error.
 
+the_user_could_not_be_unlocked_due_database_error = The user {0} could not be unlocked due to a database error.
+
+the_user_could_not_be_unlocked_since_no_active_role = The user {0} cannot be unlocked since he has no active role.
+
 the_user_could_not_be_edited_because_no_user_types = The user could not be edited because there are no user types available.
 
 the_user_has_been_deleted = The user has been deleted.
@@ -853,7 +853,7 @@ the_user_has_been_removed_successfully = The user has been removed successfully.
 
 the_user_has_been_restored = The user has been restored.
 
-the_user_has_been_unlocked = The user has been unlocked.
+the_user_has_been_unlocked = The user {0} has been unlocked.
 
 the_user_has_no_role_in_study = The user has no role in the specified study.  You may not use this feature to add the user to a new study.
 
