Fixes #1226: Date format in RS should match format in CRF. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1496 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/format.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/format.properties
@@ -20,6 +20,8 @@ date_format_calender = %d-%b-%Y
 #########################################
 date_format_string = dd-MMM-yyyy
 
+bootstrap_datapicker_date_format = dd-M-yyyy
+
 date_format_string_ds = yyyy-MM-dd
 
 #date_time_format_string = MM/dd/yyyy hh:mm:ss a
