Fixes #933: Change 'Unavailable' status to 'Completed' in Excel Export of Audit Log when CRF is completed. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1506 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -12,6 +12,8 @@ Archive_CRF_Version = Archive CRF Version
 
 August = August
 
+auto_removed = auto-removed
+
 CDISC_ODM_XML_format = CDISC ODM XML
 
 CRF = CRF
@@ -1055,6 +1057,8 @@ facility_recruitment_status = Facility Recruitment Status
 
 facility_state_province = Facility State/Province
 
+FALSE = FALSE
+
 father = Father
 
 favorite_color = Favorite Color
@@ -1260,6 +1264,8 @@ interviewer_name_editable = Interviewer Name Editable?
 
 invalid = Invalid
 
+invalid_ = invalid
+
 it_may_be_restored_by = It may be restored by a system administrator.
 
 item_ID = Item ID
@@ -1330,6 +1336,8 @@ lock_crf_version = Lock CRF Version
 lock_event_definition = Lock Event Definition
 
 locked = Locked
+
+locked_ = locked
 
 log_out = Log Out
 
@@ -1454,6 +1462,8 @@ none = None
 not_equal_to = not equal to
 
 not_saved = not in DB yet
+
+not_scheduled = not scheduled
 
 not_specified = Not Specified
 
@@ -1587,6 +1597,8 @@ perform_administrative_editing = perform administrative editing
 
 perform_administrative_edits = Perform administrative edits
 
+pending = pending
+
 person_ID = Person ID
 
 phone = Phone
@@ -1643,6 +1655,8 @@ print_discrepancy_notes = ClinCapture-Print Discrepancy Notes
 print_entire_CRF = Print Entire CRF
 
 print_out_form = Print out Form
+
+private = private
 
 proceed_to_add_subject = Proceed to Add Subject
 
@@ -1737,6 +1751,8 @@ remove_this_filter = Remove this Filter
 remove_user_role = Remove User Role
 
 removed = Removed
+
+removed_ = removed
 
 repeat = Repeat
 
@@ -1864,6 +1880,8 @@ schedule_new_event = Schedule New Event
 schedule_study_event_for = Schedule Study Event for
 
 scheduled = Scheduled
+
+scheduled_ = scheduled
 
 secondary_ID = Secondary ID
 
@@ -1996,6 +2014,8 @@ skip_apply_filter_and_save = Skip Apply Filter and Save
 
 skipped = Skipped
 
+skipped_ = skipped
+
 specify = Specify
 
 specify_criteria = Specify Criteria
@@ -2042,6 +2062,8 @@ status_set = Status Set
 statuses = Statuses
 
 stopped = Stopped
+
+stopped_ = stopped
 
 studies = Studies
 
@@ -2301,6 +2323,8 @@ total = Total
 total_events_CRF = Total Event CRFs
 
 total_items = Total Items
+
+TRUE = TRUE
 
 type = Type
 
@@ -2739,6 +2763,7 @@ crf_is_hidden=The CRF is hidden
 
 studies_using_crf=Studies Using This CRF For Data Entry
 data_entry_started = Data Entry Started
+data_entry_started_ = data entry started
 item_status = Item Status
 server_time_info = Note that the 'Login Attempt Date field' is based on server time.  The current server time is
 
@@ -2858,7 +2883,9 @@ successful_rule_upload=  {0} Rule(s) and {1} Rule Assignment(s) were uploaded su
 this_removed = This has been removed.
 # 4139
 available = Available
+available_ = available
 frozen = Frozen
+frozen_ = frozen
 # The information below must be part of every ClinCapture instance used and can not be changed.  If you would like to become an Enterprise user of ClinCapture, please send an # email to enterprise@openclinica.org for more information.
 # DO NOT CHANGE ANY OF THE TEXT BELOW
 footer.license.1= &copy; 2004-2009 Clinovo LLC and collaborators. The Program is provided AS IS, without warranty.
@@ -3205,6 +3232,7 @@ smq_level = SMQ Level
 tui = TUI
 umls_cui = UMLS CUI
 completed = Completed
+completed_ = completed
 
 # ticket 329
 customize_home_page = Customize Home Page
