Fixes #54: Add the ability to completely delete a CRF. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1507 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1300,3 +1300,11 @@ corrected_CRF_data_entry_error = Corrected CRF data entry error
 source_data_was_missing = Source data was missing
 source_data_was_incorrect = Source data was incorrect
 information_was_not_available = Information was not available
+
+some_subjects_have_already_opened_DE_stage = Some subjects have already been opened for a stage of Data Entry for this CRF
+some_dn_have_already_opened = Some Disrepancy Notes have already been opened for this CRF
+some_study_event_already_contain = Some Study Event Definitions already contain this CRF
+some_rules_have_already_created = Some Rules have already been created on top of this CRF
+the_crf_has_been_removed = The CRF has been successfully removed
+are_you_sure_want_to_delete = Are you sure you want to delete this CRF? This action cannot be undone.
+
