Fixes #1345: Uploading file functionality gives Oops page. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1513 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2400,6 +2400,8 @@ upload_excel_file = Upload Excel File
 
 upload_file = Upload File
 
+file_upload = File Upload
+
 user_and_roles = User and Roles
 
 user_full_name = User Full Name
