Refs #1296: Rework Study Parameters Configuration. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1560 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1182,11 +1182,11 @@ here = here
 
 hide = Hide
 
-how_to_generate = How to Generate the Subject Person ID?
+how_to_generate = How to Generate the Subject Person ID
 
-how_to_generate_the_study_subject_ID = How to Generate Subject ID?
+how_to_generate_the_study_subject_ID = How to Generate Subject ID
 
-how_to_generate_the_subject = How to Generate the Subject Person ID?
+how_to_generate_the_subject = How to Generate the Subject Person ID
 
 icon_key = Icon Key
 
@@ -3221,6 +3221,8 @@ import_msg_part1 = Current
 import_msg_part2 = was not configured to replace existing data during import. Several items will be skipped.
 code = Code
 medical_coding=Medical Coding
+randomization_parameters = Randomization Parameters
+assign_randomization_parameters_to = Assign Randomization Parameters to
 
 # coded item description
 preferred_name = Preferred Name
@@ -3266,7 +3268,7 @@ defaultBioontologyURL = Bioontology URL
 dictionary=Dictionary
 mc_dictionaries=Medical Coding Dictionaries
 autoCodeDictionaryName=Auto-code Dictionary Name
-medicalCodingApprovalNeeded = Medical Coding Approval Needed
+medicalCodingApprovalNeeded = Approval Needed?
 message_for_not_scheduled_event_if_study_is_not_available=To schedule this event the current Study's status needs to be 'Available'.
 autoCode=Auto-Code
 medicalCodingContextNeeded=Code with context?
