--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -676,6 +676,8 @@ resp_label_with_different_resp_values_html_error = RESPONSE_VALUES_OR_CALCULATIO
 
 restore_SED = Restore Study Event Definition
 
+restore_event_crf_failed_crf_is_not_available = Restore on an Event CRF cannot be performed on a CRF that is not available.
+
 restore_event_CRF_to_event = Restore Event CRF to Event
 
 restore_event_to_study = Restore Event to Study
