--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3565,4 +3565,4 @@ there_are_no_rules = There are no Rules in this CRF, or there were no results fr
 there_are_no_rules1 = If you think this is an error, please review the Rules for this CRF and their settings by clicking
 job_modified_successfully=Your job has been successfully modified.
 check_disable_dde=You are choosing to have this CRF go through one pass of data entry instead of having it go through Double Data Entry. Before choosing this option, ensure that all Subject`s who have data entry for this CRF are not in one of the following 2 phases:<br /><br /> &nbsp;&nbsp;&nbsp;&nbsp; 1. The event CRF is in a status of Double Data Entry Started <br /> &nbsp;&nbsp;&nbsp;&nbsp; 2. The event CRF is in a status of Initial Data Entry Completed. <br /><br /> If the CRFs are in one of those two phases, data entry will not be allowed to continue. You will have to change the configuration back to Double Data Entry. <br /><br />Select Yes to remove the DDE configuration. Select No to keep the DDE configuration.
-
+associated_event_definitions = Associated Event Definitions
