Refs #1361: Cannot restore CRF to event. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1653 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -678,6 +678,8 @@ restore_SED = Restore Study Event Definition
 
 restore_event_crf_failed_crf_is_not_available = Restore on an Event CRF cannot be performed on a CRF that is not available.
 
+restore_event_crf_failed_crf_version_is_not_available = Restore on an Event CRF cannot be performed on a CRF version that is not available.
+
 restore_event_CRF_to_event = Restore Event CRF to Event
 
 restore_event_to_study = Restore Event to Study
