Fixes #1304: Interactive legend items in the bar widgets. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1701 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1487,6 +1487,8 @@ notes_and_discrepancies = Notes & Discrepancies
 
 notes_and_discrepancies_descriptions = Notes & Discrepancies Descriptions
 
+notScheduled = Not Scheduled
+
 null_values = Null Values
 
 num_CRFs_SDV = # of CRFs SDV'd
