Fixes #1419: Import Data Properties are saved in two different places. Submitted by frank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1711 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3512,7 +3512,7 @@ systemProperty.randomizationusername.description=Authentication credentials must
 systemProperty.randomizationpassword.label=Password
 systemProperty.randomizationTrialId.label=Trial ID
 systemProperty.randomizationTrialId.description=If specified here, Randomization Trial ID applies to all studies in ClinCapture. \
-  You can also specify aTrial ID in the randomization CRF.  However, Trial ID cannot be specified in both places.
+  You can also specify a Trial ID in the randomization CRF.  However, Trial ID cannot be specified in both places.
 
 systemProperty.level.label=Level
 systemProperty.dictionary.label=Dictionary
@@ -3520,6 +3520,7 @@ systemProperty.dictionary.label=Dictionary
 systemProperty.allowCodingVerification.label=Allow medical coding
 systemProperty.allowCodingVerification.yes.radioLabel=Yes
 systemProperty.allowCodingVerification.no.radioLabel=No
+systemProperty.allowCodingVerification.description=Medical Coding properties defined here apply as defaults to all studies. However, they can be overridden at study level under Tasks -> Build Study, with the exception of Bioontology URL and Bioontology API Key.
 systemProperty.medicalCodingApprovalNeeded.label=Medical Coding Approval Needed
 systemProperty.medicalCodingApprovalNeeded.yes.radioLabel=Yes
 systemProperty.medicalCodingApprovalNeeded.no.radioLabel=No
@@ -3533,6 +3534,7 @@ systemProperty.medicalCodingApiKey.label=Bioontology API key
 systemProperty.markImportedCRFAsCompleted.label=Mark imported CRF as Completed
 systemProperty.markImportedCRFAsCompleted.yes.radioLabel=Yes
 systemProperty.markImportedCRFAsCompleted.no.radioLabel=No
+systemProperty.markImportedCRFAsCompleted.description=Data Import properties defined here apply as defaults to all studies. Howerver, they can be overridden at study level under Tasks -> Build Study.
 systemProperty.replaceExisitingDataDuringImport.label=Replace existing data during import
 systemProperty.replaceExisitingDataDuringImport.yes.radioLabel=Yes
 systemProperty.replaceExisitingDataDuringImport.no.radioLabel=No
