Fixes #1416: Add option to enable the option of randomizing subjects more than once. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1731 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3412,6 +3412,11 @@ systemProperty.assignRandomizationResultTo.description=
 systemProperty.assignRandomizationResultTo.dngroup.radioLabel=Dynamic Group
 systemProperty.assignRandomizationResultTo.ssid.radioLabel=Study Subject ID
 systemProperty.assignRandomizationResultTo.none.radioLabel=Neither
+
+systemProperty.randomizationEnviroment.label=Randomization Enviroment
+systemProperty.randomizationEnviroment.description=
+systemProperty.randomizationEnviroment.prod.radioLabel=Production
+systemProperty.randomizationEnviroment.test.radioLabel=Test
  
 systemProperty.exportFilePath.label=Export path
 systemProperty.exportFilePath.description=This parameter configures the path for the exported datasets.  A subfolder in the system repository will be created.<br/><br/> \
