Fixes #1418: Create NDs per CRF widget. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1769 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3249,9 +3249,11 @@ events_completion_widget_header = Event Status Details
 subject_status_count_widget_header = Subject Status Summary
 study_progress_widget_header = Events Status Summary
 sdv_progress_widget_header = Source Data Verification Progress
+nds_per_crf_widget_header = Notes and Discrepancies per CRF
 
 # widgets description
 sdv_widget_description = SDV Progress.
+nds_per_crf_widget_description = NDs per CRF.
 
 # toolbar header
 available_widgets = Available Widgets
