Fixes #1393: Delete CRF Associated with an Event. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1794 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -837,3 +837,6 @@ drag_n_drop_instruction = Drag and drop reports to change your Home Page layout
 
 system_properties_instruction = The system properties are listed here. Some of the properties are read-only and can only be changed in datainfo.properties. Expand the desired sections to change the system properties.
 system_properties_confirm_instruction = Please click Submit to commit the system properties listed here, Back to re-configure them and Cancel to cancel the operation without making any changes.
+
+this_operation_will_permanently_delete_this_crf = This operation will PERMANENTLY delete this CRF and cannot be undone.
+you_are_completely_deleting_a_crf = You are COMPLETELY DELETING a CRF. This operation is permanent and cannot be undone.
