--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3602,3 +3602,11 @@ atc4 = ATC4
 atc3 = ATC3
 atc2 = ATC2
 atc1 = ATC1
+
+confirm_deletion_of_crf =  Confirm Deletion of CRF
+discrepancy_notes_affected = Discrepancy Notes Affected
+rules_affected = Rules Affected
+crf_data_affected = CRF Data Affected
+this_crf_has_associated_data = This CRF has associated data that is preventing its deletion.
+this_crf_has_no_conflict_data = This CRF has no conflicting data, and can be deleted.  Please click 'Submit' to complete the operation.
+the_crf_has_been_removed = The CRF has been successfully removed
