Fixes #1465: Create "Enrollment Progress" widget for Study level. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1853 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2759,6 +2759,7 @@ hide_event_notes=Hide events and discrepancy notes
 there_are_no_rows_because_no_events=There are not yet any events and/or CRFs.
 List_of_Notes_Discrepancies=List of Notes and Discrepancies
 signed = signed
+Signed = Signed
 # for audit logs
 date_time_of_server = Date/Time of Server
 
@@ -3250,10 +3251,12 @@ subject_status_count_widget_header = Subject Status Summary
 study_progress_widget_header = Events Status Summary
 sdv_progress_widget_header = Source Data Verification Progress
 nds_per_crf_widget_header = Notes and Discrepancies per CRF
+enrollment_progress_widget_header = Enrollment Progress
 
 # widgets description
 sdv_widget_description = SDV Progress.
 nds_per_crf_widget_description = NDs per CRF.
+enrollment_progress_widget_description = Subjects Enrolled per Month.
 
 # toolbar header
 available_widgets = Available Widgets
