Fixes #1488: CC does not support ODM 1.2 for import. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1864 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1083,7 +1083,7 @@ study_subject_id_should_be_empty=You have picked auto-generation for the study p
 
 your_user_name_used_by_other_try_another = Your user name has been used by other users. Please try another name.
 
-your_xml_is_not_well_formed = Your XML is not well-formed, and does not comply with the ODM 1.3 Schema.  Please check it, and try again.  It returned the message: {0}
+your_xml_is_not_well_formed = Your XML is not well-formed, and does not comply with the ODM Schema.  Please check it, and try again.  It returned the message: {0}
 
 SECTION_TITLE_column = Section title column
 RESPONSE_VALUES_column = Response values column
