--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1312,3 +1312,5 @@ some_rules_have_already_created = Some Rules have already been created on top of
 the_crf_has_been_removed = The CRF has been successfully removed
 are_you_sure_want_to_delete = Are you sure you want to delete this CRF? This action cannot be undone.
 
+operation_cannot_be_performed_on_a_locked_crf = Operation cannot be performed on a locked CRF. Unlock the CRF to code a verbatim item or delete a medical code.
+
