Fixes #1513: CRF Evaluation System Properties. Submitted by vitaly.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1886 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3613,3 +3613,12 @@ crf_data_affected = CRF Data Affected
 this_crf_has_associated_data = This CRF has associated data that is preventing its deletion.
 this_crf_has_no_conflict_data = This CRF has no conflicting data, and can be deleted.  Please click 'Submit' to complete the operation.
 the_crf_has_been_removed = The CRF has been successfully removed
+
+systemProperty.crf_evaluation.name=CRF Evaluation
+systemProperty.allowCrfEvaluation.label=Allow CRF evaluation
+systemProperty.allowCrfEvaluation.description=CRF evaluation allows a user to evaluate the data in a designated CRF without having access to any other data in the Study.  System properties defined here apply as defaults to all studies. However, they can be overridden at study level under Tasks -> Build Study.
+systemProperty.allowCrfEvaluation.yes.radioLabel=Yes
+systemProperty.allowCrfEvaluation.no.radioLabel=No
+systemProperty.evaluateWithContext.label=Evaluate with context
+systemProperty.evaluateWithContext.yes.radioLabel=Yes
+systemProperty.evaluateWithContext.no.radioLabel=No
