Fixes #1505: Save randomization data before clicking "Save". Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1888 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -500,6 +500,8 @@ proceed_to_create_a_dataset = Proceed to Create A Dataset
 
 proceed_to_create_filter = Proceed to Create Filter
 
+randomization_successful_message = You'r randomization result was saved successfully. Click 'Save' to run rules for this CRF.
+
 recent_activity = Recent Activity
 
 recent_activity_log = Recent Activity Log
