Fixes #1525: Add help text to Evaluate in Context. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1900 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3620,5 +3620,6 @@ systemProperty.allowCrfEvaluation.description=CRF evaluation allows a user to ev
 systemProperty.allowCrfEvaluation.yes.radioLabel=Yes
 systemProperty.allowCrfEvaluation.no.radioLabel=No
 systemProperty.evaluateWithContext.label=Evaluate with context
+systemProperty.evaluateWithContext.description=If set, this parameter allows an Evaluator to display additional information to perform CRF evaluations, including the Study Subject ID and <br/> the Study Event name.
 systemProperty.evaluateWithContext.yes.radioLabel=Yes
 systemProperty.evaluateWithContext.no.radioLabel=No
