Fixes #1509: Add information about randomization result to "View Subject Record" page. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1919 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1680,6 +1680,10 @@ purpose = Purpose
 
 question_number_label = Question Number Label
 
+randomization_result = Randomization Result
+
+randomization_date = Randomization Date
+
 re-populated = re-populated
 
 reason_for_change = Reason for Change
