Fixes #1527: Implement Back-button for "Reassign Subject" page. Submitted by igor
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1928 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -749,6 +749,8 @@ subject_event_signed = All the Events in the Study Subject updated to signed.
 
 subject_group_class_only_added_top_level = Subject group class may only be added to top-level Studies.
 
+subject_not_reassigned = The subject {0} has not been reassigned. There is no such study/site.
+
 subject_reassigned = The subject {0} has been reassigned to study/site {1}.
 
 subject_updated_succcesfully = The subject has been updated successfully.
