--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3627,3 +3627,4 @@ systemProperty.evaluateWithContext.label=Evaluate with context
 systemProperty.evaluateWithContext.description=If set, this parameter allows an Evaluator to display additional information to perform CRF evaluations, including the Study Subject ID and <br/> the Study Event name.
 systemProperty.evaluateWithContext.yes.radioLabel=Yes
 systemProperty.evaluateWithContext.no.radioLabel=No
+evaluated_crf=Evaluate CRF
