Fixes #1520: Create a Coding Progress Widget. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1948 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3256,11 +3256,13 @@ study_progress_widget_header = Events Status Summary
 sdv_progress_widget_header = Source Data Verification Progress
 nds_per_crf_widget_header = Notes and Discrepancies per CRF
 enrollment_progress_widget_header = Enrollment Progress
+coding_progress_widget_header = Coding Progress
 
 # widgets description
 sdv_widget_description = SDV Progress.
 nds_per_crf_widget_description = NDs per CRF.
 enrollment_progress_widget_description = Subjects Enrolled per Month.
+coding_progress_widget_description = Coding progress.
 
 # toolbar header
 available_widgets = Available Widgets
