Fixes #1572: Editing a rule in Rules Studio does not work. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1952 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -844,3 +844,6 @@ system_properties_confirm_instruction = Please click Submit to commit the system
 
 this_operation_will_permanently_delete_this_crf = This operation will PERMANENTLY delete this CRF and cannot be undone.
 you_are_completely_deleting_a_crf = You are COMPLETELY DELETING a CRF. This operation is permanent and cannot be undone.
+
+this_operation_will_permanently_delete_this_crf_version = This operation will PERMANENTLY delete this CRF Version and cannot be undone.
+you_are_completely_deleting_a_crf_version = You are COMPLETELY DELETING a CRF Version. This operation is permanent and cannot be undone.
