Fixes #1545: Save the strata variables when a randomization result is returned. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1966 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -500,9 +500,9 @@ proceed_to_create_a_dataset = Proceed to Create A Dataset
 
 proceed_to_create_filter = Proceed to Create Filter
 
-randomization_successful_message = You'r randomization result was saved successfully. Click 'Save' to run rules for this CRF.
+randomization_successful_message = Your randomization result and stratification variables were saved successfully. Click 'Save' to run rules for this CRF.
 
-randomization_des_message = Subject can be randomized only at Initial Data Enty step.
+randomization_des_message = Subject can be randomized once during initial data entry.
 
 recent_activity = Recent Activity
 
